# leansig-zkvm-bench

./: .gitignore  CLAUDE.md  INTEGRATION.md  README.md
miden/: README.md
miden-leanSig/: PROGRESS.md
miden-leanSig/masm/field/: koalabear.masm
miden-leanSig/masm/poseidon2/: constants.masm  linear.masm  permutation16.masm
miden-leanSig/tests/: constants_test.masm  field_comprehensive_test.masm  field_test.masm  mul_test.masm  poseidon2_full_test.masm  poseidon2_round1_test.masm  poseidon2_sbox_test.masm  poseidon2_simple_test.masm  pow3_test.masm  simple_sbox_test.masm  simple_test.masm
openVM-leanSig/: .gitignore  AGENTS.md  README.md  plan.md
openVM-leanSig/guest/: openvm.toml
openVM-leanSig/guest/src/: main.rs  xmss_verify.rs
openVM-leanSig/host/src/commands/: benchmark_openvm.rs  mod.rs
openVM-leanSig/host/src/utils/: openvm.rs
openVM-leanSig/lib/src/zkvm/: guest.rs
openVM-leanSig/openspec/changes/archive/2025-11-06-remove-xmss-wrapper/: design.md
openVM-leanSig/openspec/changes/archive/2025-11-06-remove-xmss-wrapper/specs/xmss-hashsig/: spec.md
openVM-leanSig/openspec/changes/archive/2025-11-11-define-xmss-no-std-bridge/: proposal.md
openVM-leanSig/openspec/changes/archive/2025-11-11-define-xmss-no-std-bridge/specs/xmss-hashsig/: spec.md
openVM-leanSig/openspec/changes/archive/2025-11-14-optimize-poseidon-reuse/: proposal.md
openVM-leanSig/openspec/changes/archive/2025-11-14-optimize-poseidon-reuse/specs/xmss-hashsig/: spec.md
openVM-leanSig/openspec/specs/xmss-hashsig/: spec.md
openVM-leanSig/xmss-types/: Cargo.toml
openVM-leanSig/xmss-types/src/: lib.rs
openvm/: CLAUDE.md  Cargo.toml  README.md
openvm/guest/: Cargo.toml  input.json
openvm/host/: Cargo.toml
openvm/host/src/: main.rs
openvm/host/src/utils/: input.rs  mem.rs  mod.rs
openvm/lib/: Cargo.toml
openvm/lib/src/: leansig_export.rs  lib.rs
openvm/lib/src/zkvm/: host.rs  mod.rs
openvm/openspec/changes/archive/2025-11-06-remove-xmss-wrapper/: proposal.md  tasks.md
openvm/openspec/changes/archive/2025-11-11-define-xmss-no-std-bridge/: tasks.md
openvm/openspec/changes/archive/2025-11-11-switch-xmss-to-poseidon/: proposal.md  tasks.md
openvm/openspec/changes/archive/2025-11-11-switch-xmss-to-poseidon/specs/xmss-hashsig/: spec.md
openvm/openspec/changes/archive/2025-11-14-optimize-poseidon-reuse/: tasks.md
risc0/: FEASIBILITY_REPORT.md  README.md
risc0-leansig/.claude/skills/risc0-benchmark/: SKILL.md
risc0-leansig/.claude/skills/risc0-benchmark/examples/: basic-benchmark.rs
risc0-leansig/.claude/skills/risc0-prove/examples/: basic-proof.rs
risc0-leansig/.claude/skills/risc0-setup/: SKILL.md
risc0-leansig/.claude/skills/risc0-setup/scripts/: check-prerequisites.sh
risc0-leansig/docs/: no_std_blockers.md
risc0-leansig/leansig_zkvm/core/: Cargo.toml
risc0-leansig/leansig_zkvm/core/src/: field.rs  tweak_hash.rs  verify.rs
risc0-leansig/leansig_zkvm/host/src/: main.rs
risc0/.claude/skills/risc0-benchmark/references/: optimization-guide.md
risc0/.claude/skills/risc0-prove/: SKILL.md
risc0/.claude/skills/risc0-prove/references/: receipt-types.md
risc0/docs/: dependency_analysis.md  poseidon2_requirements.md
risc0/leansig_zkvm/: README.md
risc0/leansig_zkvm/core/: Cargo.toml
risc0/leansig_zkvm/core/src/: encoding.rs  field.rs  lib.rs  poseidon.rs  types.rs  verify.rs
risc0/leansig_zkvm/host/: Cargo.toml
risc0/leansig_zkvm/host/src/: main.rs
risc0/leansig_zkvm/methods/guest/: Cargo.toml
risc0/leansig_zkvm/methods/guest/src/: main.rs
scripts/: generate_chart.py
shared/constants/: Cargo.toml
shared/constants/src/: lib.rs
shared/leansig-core/: Cargo.toml
shared/leansig-core/src/: koalabear.rs  lib.rs  types.rs  verify.rs
shared/test-gen-core/: Cargo.toml
shared/test-gen-core/src/: lib.rs
sp1/: .gitignore  Cargo.toml  README.md
sp1/leansig-minimal/: Cargo.toml
sp1/leansig-minimal/src/: encoding.rs  lib.rs  poseidon.rs  verify.rs
sp1/program/: Cargo.toml
sp1/program/src/: main.rs
sp1/script/: Cargo.toml  build.rs
sp1/script/src/: main.rs
sp1/test-gen/: Cargo.toml
sp1/test-gen/src/: main.rs
zisk/: BENCHMARK.md  Cargo.toml  README.md
zisk-leanSig/: Cargo.toml
zisk-leanSig/leansig-minimal/src/: poseidon.rs  verify.rs
zisk-leanSig/test-gen/: Cargo.toml
zisk/leansig-minimal/: Cargo.toml
zisk/leansig-minimal/src/: encoding.rs  lib.rs  poseidon.rs  types.rs
zisk/test-gen/: Cargo.toml
zisk/test-gen/src/: main.rs
zisk/verifier/: Cargo.toml
zisk/verifier/src/: main.rs
