[workspace]
members = ["host", "xmss-types", "lib"]
exclude = ["guest"]
resolver = "2"

[workspace.dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", features = ["std"], default-features = false ,tag = "v1.4.2"}
serde = { version = "1.0", features = ["derive"], default-features = false }
leansig = { git = "https://github.com/leanEthereum/leanSig.git" }
bincode = { version = "1.3" }
# Use same Plonky3 revision as leanSig for compatibility
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", package = "p3-field", rev = "a33a312" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git", package = "p3-koala-bear", rev = "a33a312" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", package = "p3-symmetric", rev = "a33a312" }
