[package]
name = "xmss-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", default-features = false,tag = "v1.4.2" }
xmss-types = { path = "../xmss-types", default-features = false }
openvm-sha2 = { git = "https://github.com/openvm-org/openvm.git" ,tag = "v1.4.2" }
# Use same Plonky3 revision as leanSig for compatibility
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", package = "p3-field", rev = "a33a312", default-features = false }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git", package = "p3-koala-bear", rev = "a33a312", default-features = false }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", package = "p3-symmetric", rev = "a33a312", default-features = false }

[features]
default = []
std-entry = []
cuda = [
    "openvm-sha2/cuda",
]
