[package]
name = "leansig-minimal"
version = "0.1.0"
edition = "2021"
description = "Minimal no_std implementation of leanSig XMSS verification (TargetSum W=1)"

[features]
default = []
std = [
    "serde/std",
]

[dependencies]
serde = { workspace = true }
postcard = { version = "1.0", default-features = false, features = ["alloc"] }
