[package]
name = "leansig-minimal"
version = "0.1.0"
edition = "2021"
description = "Minimal no_std implementation of leanSig XMSS verification"

[features]
default = []
std = [
    "sha3/std",
    "serde/std",
]

[dependencies]
p3-field = { workspace = true }
p3-koala-bear = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
sha3 = { workspace = true }
serde = { workspace = true }
postcard = { version = "1.0", default-features = false, features = ["alloc"] }
