[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.4" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
leansig-core = { path = "../core" }
leansig-shared = { path = "../../../shared/leansig-core" }
hex = "0.4"
bincode = "1.3"
postcard = "1.0"
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "a33a312" }
